src/objects/Stream_Request_Details__c.object
<CustomObject>
    <fields>
        <fullName>Termination_Reason__c</fullName>
        <label>Termination Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cost</fullName>
                </value>
                <value>
                    <fullName>Death/Deceased</fullName>
                </value>
                <value>
                    <fullName>Enrolled in Error</fullName>
                </value>
                <value>
                    <fullName>Laid Off/Left employment</fullName>
                </value>
                <value>
                    <fullName>Migrated to United</fullName>
                </value>
                <value>
                    <fullName>Moving out of area</fullName>
                </value>
                <value>
                    <fullName>Multiple ID numbers</fullName>
                </value>
                <value>
                    <fullName>Non-payment</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Other Insurance benefits available</fullName>
                </value>
                <value>
                    <fullName>Overage</fullName>
                </value>
                <value>
                    <fullName>Per Reconciliation</fullName>
                </value>
                <value>
                    <fullName>Voluntary/No reason given</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Title_of_person_authorizing_this_change__c</fullName>
        <description>Title of person authorizing this change for Group Level Updates.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Title of person authorizing this change</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unmasked_SSN_data_required__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If this box is checked, a valid business justification will be required.</inlineHelpText>
        <label>Unmasked SSN data required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_Email_Updated__c</fullName>
        <description>Updated User Email for EService request</description>
        <encryptionScheme>None</encryptionScheme>
        <label>User Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>User_Email__c</fullName>
        <description>User Email captured for EServices request</description>
        <encryptionScheme>None</encryptionScheme>
        <label>User Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>User_First_Name__c</fullName>
        <description>Updated First Name for EService request</description>
        <encryptionScheme>None</encryptionScheme>
        <label>User First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Last_Name__c</fullName>
        <description>Updated Last Name for EService request</description>
        <encryptionScheme>None</encryptionScheme>
        <label>User Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Phone__c</fullName>
        <description>User Phone captured for EServices request</description>
        <encryptionScheme>None</encryptionScheme>
        <label>User Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <label>Vendor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Assigned</fullName>
                    <default>true</default>
                    <label>Not Assigned</label>
                </value>
                <value>
                    <fullName>Hyderabad</fullName>
                </value>
                <value>
                    <fullName>Chennai</fullName>
                </value>
                <value>
                    <fullName>Manila</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vision__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vision</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <description>Zip Code of the agency or broker for EServices</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eServices_Policy_RecordTypeId__c</fullName>
        <description>This is a backend field used to store the record type id for eServices Policy record type.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>eServices Policy RecordTypeId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Request Details</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Dependent_Count__c</columns>
        <columns>Plat_form__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Assigned</fullName>
        <columns>Case__c</columns>
        <columns>Stream_Request_Number__c</columns>
        <columns>Plat_form__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>ERM_Case_Status__c</columns>
        <columns>Closed_Date__c</columns>
        <columns>Policy__c</columns>
        <columns>RequestType__c</columns>
        <columns>Estimated_Transactions__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Integrated_Administration__c</columns>
        <filterScope>Mine</filterScope>
        <label>Assigned</label>
    </listViews>
    <listViews>
        <fullName>Requested</fullName>
        <columns>Case__c</columns>
        <columns>Stream_Request_Number__c</columns>
        <columns>Plat_form__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>ERM_Case_Status__c</columns>
        <columns>Closed_Date__c</columns>
        <columns>Policy__c</columns>
        <columns>RequestType__c</columns>
        <columns>Estimated_Transactions__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Integrated_Administration__c</columns>
        <filterScope>Mine</filterScope>
        <label>Requested</label>
    </listViews>
    <nameField>
        <displayFormat>RD-{0000000}</displayFormat>
        <label>Request Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Request Details</pluralLabel>
    <recordTypes>
        <fullName>CPTIN_Request_Details</fullName>
        <active>true</active>
        <description>Record Type used for capturing request details for CPTIN.</description>
        <label>CPTIN Request Details</label>
    </recordTypes>
    <recordTypes>
        <fullName>Dual_Platform_Request_Details</fullName>
        <active>true</active>
        <description>Record Type used for capturing request details for Dual Platform.</description>
        <label>Dual Platform Request Details</label>
    </recordTypes>
    <recordTypes>
        <fullName>EServices_Request_Details</fullName>
        <active>true</active>
        <description>Record Type to capture EServices request details on ERM Case</description>
        <label>EServices Request Details</label>
    </recordTypes>
    <recordTypes>
        <fullName>Request_Details</fullName>
        <active>true</active>
        <description>Specific request details that varies for a given request type</description>
        <label>Request Details</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CPTIN_Exactly_11_Digits</fullName>
        <active>true</active>
        <description>This is used to restrict CPTIN number to exactly 11 digits.</description>
        <errorConditionFormula>AND(
    TEXT( RequestType__c )= &quot;CPTIN&quot;,
    NOT(ISBLANK(Subscriber_CPTIN__c)),
OR(
      NOT(ISNUMBER(Subscriber_CPTIN__c)),  
      LEN(Subscriber_CPTIN__c) != 11
   )
)</errorConditionFormula>
        <errorDisplayField>Subscriber_CPTIN__c</errorDisplayField>
        <errorMessage>Please enter exactly 11 numeric digits</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Date_of_Birth_No_Future_Date</fullName>
        <active>true</active>
        <description>This is used to not allow a future date for Date of Birth.</description>
        <errorConditionFormula>AND(
NOT(ISBLANK(Date_of_Birth__c)),
Date_of_Birth__c &gt; TODAY()
)</errorConditionFormula>
        <errorDisplayField>Date_of_Birth__c</errorDisplayField>
        <errorMessage>DOB must not be a future date!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ETSBE_Request_ID_Format</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
NOT(BEGINS(LOWER(ETS_BE_ISET_ACET_Request_ID__c) , &quot;int-&quot;)),
NOT(BEGINS(LOWER(ETS_BE_ISET_ACET_Request_ID__c) , &quot;ev&quot;))
)
||
AND(
BEGINS(LOWER(ETS_BE_ISET_ACET_Request_ID__c) , &quot;int-&quot;),
LEN(ETS_BE_ISET_ACET_Request_ID__c)!=11,
LEN(ETS_BE_ISET_ACET_Request_ID__c)!=12
)
||
AND(
BEGINS(LOWER(ETS_BE_ISET_ACET_Request_ID__c) , &quot;ev&quot;),
LEN(ETS_BE_ISET_ACET_Request_ID__c)!=9
)</errorConditionFormula>
        <errorDisplayField>ETS_BE_ISET_ACET_Request_ID__c</errorDisplayField>
        <errorMessage>ETS-BE/ISET/ACET Request ID Confirmation number invalid.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Group_Level_Term_Validation</fullName>
        <active>true</active>
        <description>PRIME Policy Number to be terminated OR  PRIME Customer Number to be terminated should not be empty for Group Level Term.</description>
        <errorConditionFormula>AND(
TEXT( RequestType__c )= &quot;Group Level Term&quot;,
NOT(ISNEW()),
ISBLANK(PRIME_Policy_Number_s_to_be_Terminated__c) &amp;&amp; ISBLANK( PRIME_Customer_Number_s_to_Terminate__c )
)</errorConditionFormula>
        <errorMessage>You must submit either a customer number or policy number to term.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_Edit_Submitted_Requests</fullName>
        <active>true</active>
        <description>Do not allow requests to be edited after a request is submitted..</description>
        <errorConditionFormula>AND(
NOT(Bypass_Validation_Rule__c),
AND(NOT(ISBLANK(Case__r.External_Reference_ID__c)),Is_Submitted__c),
NOT($Profile.Name = &quot;Integration&quot;)
)</errorConditionFormula>
        <errorMessage>Request details cannot be modified after it is submitted.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Product_Selection_Required</fullName>
        <active>true</active>
        <description>Product Selection is required for Reinstate and Cobra Add</description>
        <errorConditionFormula>AND(
OR(TEXT( RequestType__c )= &quot;Reinstate&quot;, TEXT( RequestType__c )= &quot;COBRA Add&quot;),
NOT(ISNEW()),
NOT(
    OR(Medical__c, Rx__c, Dental__c, Vision__c, Medical_Supplemental__c, Standalone__c, HSA__c, Basic_Life__c, Supplemental_Life__c, Supplemental_Life_AD_D__c, HMO__c, PPO__c, POS__c, SDHP__c, Supplemental_EE_Life__c, Supplemental_SP_Life__c, Supplemental_CH_Life__c, LTD__c, LTD_Buy_Up__c, STD__c, STD_Buy_Up__c)
   )
)</errorConditionFormula>
        <errorMessage>A product must be selected</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Report_Dates_Requested_Manual_NotAllowed</fullName>
        <active>true</active>
        <description>This is used to not allow users to add Report Dates Requested manually for W2 Reports request type.</description>
        <errorConditionFormula>AND( 
NOT( Bypass_Validation_Rule__c ),
OR
(
ISCHANGED(Report_Dates_Requested__c) &amp;&amp;   ISBLANK(PRIORVALUE(Report_Dates_Requested__c)),
ISCHANGED(Report_Dates_Requested_1__c) &amp;&amp;   ISBLANK(PRIORVALUE(Report_Dates_Requested_1__c)),
ISCHANGED(Report_Dates_Requested_2__c) &amp;&amp;   ISBLANK(PRIORVALUE(Report_Dates_Requested_2__c))
)
)</errorConditionFormula>
        <errorMessage>You cannot manually enter the Report Dates Requested.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SSN_Exactly_9_Digits</fullName>
        <active>true</active>
        <description>This is used to restrict SSN to exactly 9 digits.</description>
        <errorConditionFormula>AND(
TEXT( RequestType__c )= &quot;Standard Alt-ID Change&quot;,
NOT(ISBLANK(SSN__c)),
OR(
NOT(ISNUMBER(SSN__c)),
LEN(SSN__c) != 9
)
)</errorConditionFormula>
        <errorDisplayField>SSN__c</errorDisplayField>
        <errorMessage>SSN value must be exactly 9 numeric digits</errorMessage>
    </validationRules>
</CustomObject>